--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="col-md-12">
       <p id="author" class="change-color"></p>  </div>
     <div id="button-row" class="col-md-12">
-        <a id="tweet-quote" class="btn float-left change-background-color" title="Tweet this quote!" target="_blank" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" > <i class="fa fa-twitter" > <i class="fa fa-twitter"></i></a>
+        <a id="tweet-quote" class="btn float-left change-background-color" title="Tweet this quote!" target="_blank" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" > <i class="fa fa-twitter"></i></a>
    <button id="new-quote" class="btn float-right change-background-color" title="Get a new quote">New Quote</button></div>
 
   </div>
