--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <script src='https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js?v=1.1"></script>
 
 </body>
 </html>
